# nvflwr-nnunet

./: .gitignore  job.py  project.yml
fednnunet/: pyproject.toml
fednnunet/fednnunet/: client.py  fednnUNetTrainer.py  run_training.py  server.py
